--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 div {
   /* border-style: solid; */
-  border-color: cyan;
+  border-color: rgba(170, 222, 255, 127);
   width: auto;
   flex-grow: 1;
   background-color: rgb(30, 30, 30);
@@ -23,26 +23,26 @@ img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  border: solid 1px;
+  border: solid 1px rgba(170, 222, 255, 127);
 }
 a {
   padding: 0em 0.2em;
 }
 a:link {
-  color: cyan;
+  color: rgba(170, 222, 255, 127);
 }
 a:visited {
-  color: cyan;
+  color: rgba(170, 222, 255, 127);
 }
 a:hover {
   background-color: red;
 }
 a:active {
-  color: cyan;
+  color: rgba(170, 222, 255, 127);
 }
 button {
   background-color: black;
-  color: cyan;
+  color: rgba(170, 222, 255, 127);
   padding: 0.2em;
   margin: 0.2em;
   width: 12em;
@@ -51,11 +51,12 @@ button {
   cursor: pointer;
 }
 audio {
-  max-width: 12em;
+  max-width: 14em;
   width: auto;
 }
 li {
   border-style: solid;
+  border-color: rgba(170, 222, 255, 127);
   padding: 0.1em;
   margin: 0.1em;
 }
@@ -71,7 +72,7 @@ td {
 }
 th,
 td {
-  border: solid 1px;
+  border: solid 1px rgba(170, 222, 255, 127);
 }
 td {
   max-width: min-content;
