--- a/classes.css
+++ b/classes.css
@@ -10,6 +10,7 @@
 }
 .Footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0.5em;
@@ -30,7 +31,7 @@
 .Navigation {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   /* width: 30%; */
   border-style: solid;
@@ -41,8 +42,39 @@
   align-items: center;
   /* background-color: whitesmoke;
   color: black; */
-  width: 100%;
-  border-style: solid;
+  width: 20em;
+  max-height: 65em;
+  /* border-style: solid; */
+}
+.NavList2HomePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: whitesmoke;
+  color: black; */
+  width: 20em;
+  max-height: 44em;
+  /* border-style: solid; */
+}
+.NavList3HomePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: whitesmoke;
+  color: black; */
+  width: 20em;
+  max-height: 65em;
+  /* border-style: solid; */
+}
+.NavList4Factions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: whitesmoke;
+  color: black; */
+  width: 20em;
+  max-height: 30em;
+  /* border-style: solid; */
 }
 .InfoBlurb {
   display: flex;
@@ -51,7 +83,7 @@
   /* align-items: center; */
   padding: 0.5em;
   width: auto;
-  max-width: 90%;
+  /* max-width: 90%; */
   height: auto;
   border-style: solid;
 }
@@ -64,7 +96,7 @@
   width: auto;
   max-width: 230em;
   /* height: 80%; */
-  max-height: max-content;
+  /* max-height: max-content; */
   border-style: solid;
 }
 .InfoBlurb p {
@@ -91,15 +123,24 @@
   align-items: center;
   height: auto;
 }
+/* This fucker refuses to have the correct width */
 .TopInfo {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 99.6%;
-  min-height: 20em;
+  /* This fucking sucks */
+  /* Like the fuck */
+  width: calc(100% - 1.35em);
+  /* Brute Force */
+  /* Just setting a specific width didn't work but this does */
+  min-height: 26.5em;
+  max-height: 26.5em;
   border-style: solid;
-  padding: 0.5em 0em;
+  padding: 0.5em;
+  /* Like why does it insist on overflowing so much? */
+  /* Probably going to look goofy as fuck on smaller screens i'm making tweaks on a 4K monitor rn I don't care anymore */
+  /* Biggest reason this site will NOT work on thin screens */
 }
 .PictureFrame {
   display: flex;
@@ -124,14 +165,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 30%;
+  width: auto;
   height: 100%;
 }
 .Tables {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
+  width: auto;
   height: 100%;
 }
 .Content img {
@@ -198,6 +239,7 @@
   border-color: rgba(150, 150, 150, 255);
   /* background-color: black; */
 }
+/* Omega? */
 .FactionRemnant {
   color: rgba(70, 255, 235, 255);
   border-color: rgba(70, 255, 235, 255);
