--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  min-height: 100%;
+  /* min-height: 100%; */
   padding: 0.5em;
   margin: 0.5em;
   background-image: url(./Pictures/SectorBackground.png);
@@ -8,6 +8,7 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
   color: white;
+  overflow-x: hidden;
 }
 div {
   /* border-style: solid; */
@@ -61,8 +62,9 @@ li {
   margin: 0.1em;
 }
 table {
-  width: 90%;
+  /* width: 90%; */
   border-collapse: collapse;
+  table-layout: fixed;
 }
 table,
 th,
@@ -78,5 +80,6 @@ td {
   max-width: min-content;
 }
 hr {
+  color: rgba(170, 222, 255, 127);
   width: 100%;
 }
